--- a/css/index.css
+++ b/css/index.css
@@ -27,4 +27,9 @@
     justify-content: center;
     align-items: center;
     float: right;
+}   
+
+img {
+    display: inline-flex;
+    justify-content: space-around;
 }
