created projects structure and other starter code

--- a/css/global.css
+++ b/css/global.css
@@ -24,3 +24,13 @@
 *{
     background-image: url()
 }
+
+footer {
+    background-color: #e6a8ce;
+    border: 2px solid #eef3ee;
+    color: black;
+}
+footer {
+font-size: 35px;
+font-style: italic;
+}
