project structure and other starter code

--- a/css/global.css
+++ b/css/global.css
@@ -30,7 +30,18 @@ footer {
     border: 2px solid #eef3ee;
     color: black;
 }
+
+
 footer {
 font-size: 35px;
 font-style: italic;
 }
+
+a {
+    display: ;
+    justify-content: center;
+  
+
+   
+}
+ 
